--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 Deixe que Deus interprete.</p>
     </section>
     <footer>
-        <p>Site criado por <a href="https://github.com/crilorD">Cristhian Almeida</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/crilorD" target="_blank" rel="external">Cristhian Almeida</a> para o <a href="https://www.cursoemvideo.com/" target="_blank" rel="external">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
