--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="estilo/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
